Akregator ChangeLog
===================
(c) 2004-2006 the Akregator authors.

Changes after 1.2.2:
-----------------------------

Bug fixes:

 2006/04/29 Do not crash on startup when Combined View mode is activated
 2006/03/22 Prevent "Akregator is running" messages on startup (reset PID to -1 when closing akregator)

Changes after 1.2.1:
-----------------------------

Bug fixes:

 2006/03/09 Read more feed metadata for Atom feeds (title, link) (#123140) -fo
 2006/03/09 Use "refresh" cache mode as default, ignoring konq settings. 
            ("refresh" == Use cache after verifying with server) 
            This should make disabling the "Use browser cache" option unnecessary. -fo
 2006/02/21 Set "rel" attribute default to "alternate", as requested by Atom specification (#122409) -ew
 2006/02/21 Disable category and tag support (unless experimental GUI is enabled) in the metakit backend, 
            so it supports about 1000 feeds (500 with tags enabled) instead of 340
            now with the default 1024 open files limit on most systems. -fo
 2006/02/15 Combined View: Do not crash on "Next/Prev Unread Article" (#121999) -fo
 2006/01/31 RSS parser: ignore unknown or invalid version attribute value in the <rss> tag and
            just assume RSS 2.0. The older formats are compatible to 2.0, so this should work.
            (at least better than refusing to parse the feeds) (#118793) -fo

Changes after 1.2:
-----------------------------

Bug fixes:

 2006/01/17 Do not open binary files in the HTML viewer but externally. 
            Fix Save Link As for binary files (regression introduced after 1.2) 
            (#120087 (partially)) -fo
 2006/01/16 Fix article order in Combined View: sort by date (reversed) (#118055) -fo
 2006/01/15 Fix parsing of Atom 1.0 feeds with escaped HTML in it: Don't show tags
            as text (#112491, #117938) -fo
 2006/01/10 Select next item in article list when deleting the selected article